ADDED flex to layout of first two sections.  ADDED image and sign up button

--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
                     <li class="header-link">Header Link 2</li>
                     <li class="header-link">Header Link 3</li>
                 </ul>
+            </div>
+        </div> 
+        <div class="content">
+            <div class="content-left">
+                <h1>This website is <br/>awesome</h1>
+                <p class="p-style"> This website has some subtext that goes under the<br/> main title it has a smaller font and the color is a <br/>lower contrast</p>
+                <button type="button" class="sign-up-first-section">Sign Up</button>
+            </div>
+            <div class="content-right">
+                <img src="./resources/magpie.jpg" alt="magpie" width="400" height="500">
 
             </div>
-                
 
-        </div> 
+
+
+
+        </div>
     </div>
 </body>
