--- a/index.html
+++ b/index.html
@@ -24,17 +24,56 @@
         <div class="content">
             <div class="content-left">
                 <h1>This website is <br/>awesome</h1>
-                <p class="p-style"> This website has some subtext that goes under the<br/> main title it has a smaller font and the color is a <br/>lower contrast</p>
+                <p class="p-first"> This website has some subtext that goes under the<br/> main title it has a smaller font and the color is a <br/>lower contrast</p>
                 <button type="button" class="sign-up-first-section">Sign Up</button>
             </div>
             <div class="content-right">
                 <img src="./resources/magpie.jpg" alt="magpie" width="400" height="500">
 
             </div>
-
-
-
-
         </div>
     </div>
+    <div class="second-section">
+        <h2>some random information</h2>
+        <div class="row-of-blue-divs">
+            <div class="blue-box-msg"> 
+                <div class="blue-box"></div>
+                 <p class="p-second">this is some  subtext under <br/>an illistration or image  </p>
+            </div>
+            <div class="blue-box-msg"> 
+                <div class="blue-box"></div>
+                 <p class="p-second">this is some  subtext under <br/>an illistration or image  </p>
+            </div>
+            <div class="blue-box-msg"> 
+                <div class="blue-box"></div>
+                 <p class="p-second">this is some  subtext under <br/>an illistration or image  </p>
+            </div>
+            <div class="blue-box-msg"> 
+                <div class="blue-box"></div>
+                 <p class="p-second">this is some  subtext under <br/>an illistration or image  </p>
+            </div>
+        </div>
+    </div>
+    <div class="third-section">
+        <h3>"Blackbird singing in the dead of night,<br/>
+            Take these broken wings and learn to fly,<br/>
+            All your life,<br/>
+            You were only waiting for this moment to arise."
+            
+        </h3>
+        <p class="p-third">-The Beatles</p>
+    </div>
+    <div class="forth-section">
+        <div class="blue-oblong">
+            <div class="left">
+                <h4>Call to action! It's time!</h4>
+                <p class="final-p">Sign Up for our product by clicking that button</p>
+            </div>
+            <div class="right">
+                <button type="button" class="sign-up-forth-section">Sign Up</button>
+            </div>
+            </div>
+        </div>
+    </div>
+
 </body>
